[package]
name = "input-recorder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = { version = "*", features = ["serialize"] }
parking_lot = { version = "*", features = ["nightly"] }
cancellable-timer = "*"

iced = { version = "*", features = ["tokio"] }
iced_futures = "*"
nfd = "*"
tokio = { version = "*", features= ["sync"] }

serde = { version = "*", features = ["derive"] }
bincode = "*"
